@@ -201,7 +201,7 @@ class Groups_Controller {
 		// create tables
 		$group_table = _groups_get_tablename( 'group' );
 		if ( $wpdb->get_var( "SHOW TABLES LIKE '$group_table'" ) != $group_table ) {
-			$queries[] = "CREATE TABLE $group_table (
+			$queries[] = "CREATE TABLE IF NOT EXISTS $group_table (
 				group_id     BIGINT(20) UNSIGNED NOT NULL auto_increment,
 				parent_id    BIGINT(20) DEFAULT NULL,
 				creator_id   BIGINT(20) DEFAULT NULL,
@@ -214,7 +214,7 @@ class Groups_Controller {
 		}
 		$capability_table = _groups_get_tablename( 'capability' );
 		if ( $wpdb->get_var( "SHOW TABLES LIKE '$capability_table'" ) != $capability_table ) {
-			$queries[] = "CREATE TABLE $capability_table (
+			$queries[] = "CREATE TABLE IF NOT EXISTS $capability_table (
 				capability_id BIGINT(20) UNSIGNED NOT NULL auto_increment,
 				capability    VARCHAR(255) NOT NULL,
 				class         VARCHAR(255) DEFAULT NULL,
@@ -228,7 +228,7 @@ class Groups_Controller {
 		}
 		$user_group_table = _groups_get_tablename( 'user_group' );
 		if ( $wpdb->get_var( "SHOW TABLES LIKE '$user_group_table'" ) != $user_group_table ) {
-			$queries[] = "CREATE TABLE $user_group_table (
+			$queries[] = "CREATE TABLE IF NOT EXISTS $user_group_table (
 				user_id     bigint(20) unsigned NOT NULL,
 				group_id    bigint(20) unsigned NOT NULL,
 				PRIMARY KEY (user_id, group_id),
@@ -237,7 +237,7 @@ class Groups_Controller {
 		}
 		$user_capability_table = _groups_get_tablename( 'user_capability' );
 		if ( $wpdb->get_var( "SHOW TABLES LIKE '$user_capability_table'" ) != $user_capability_table ) {
-			$queries[] = "CREATE TABLE $user_capability_table (
+			$queries[] = "CREATE TABLE IF NOT EXISTS $user_capability_table (
 				user_id	      bigint(20) unsigned NOT NULL,
 				capability_id bigint(20) unsigned NOT NULL,
 				PRIMARY KEY   (user_id, capability_id),
@@ -246,7 +246,7 @@ class Groups_Controller {
 		}
 		$group_capability_table = _groups_get_tablename( 'group_capability' );
 		if ( $wpdb->get_var( "SHOW TABLES LIKE '$group_capability_table'" ) != $group_capability_table ) {
-			$queries[] = "CREATE TABLE $group_capability_table (
+			$queries[] = "CREATE TABLE IF NOT EXISTS $group_capability_table (
 				group_id      bigint(20) unsigned NOT NULL,
 				capability_id bigint(20) unsigned NOT NULL,
 				PRIMARY KEY   (group_id, capability_id),
@@ -254,8 +254,14 @@ class Groups_Controller {
 			) $charset_collate;";
 		}
 		if ( !empty( $queries ) ) {
-			require_once( ABSPATH . 'wp-admin/includes/upgrade.php' );
-			dbDelta( $queries );
+			// For the record ... (and https://core.trac.wordpress.org/ticket/12773 should not be closed)
+			// dbDelta() fails to handle queries "CREATE TABLE IF NOT EXISTS ..."
+			// (a regex results in "IF" used as array index holding only last query to create table).
+			//require_once( ABSPATH . 'wp-admin/includes/upgrade.php' );
+			//dbDelta( $queries );
+			foreach( $queries as $query ) {
+				$wpdb->query( $query );
+			}
 		}
 		// needs to be called to create its capabilities
 		Groups_Post_Access::activate();
